--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -32,6 +32,11 @@
     	</div>
   </div>
 
+<div id="cookieConsent">
+	<div id="closeCookieConsent">x</div>
+	This website uses cookies in order to offer you the most relevant Information. <br>Notice that this website does not keep track of any kind of personal information or IP addresses.  <a class="cookieConsentOK">OK</a>
+</div>
+
 
 
 {% endblock content %}
