--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,12 +49,12 @@
         </li>
         
       </ul>
-      <div id="google_translate_element" style="text-align: center; margin-left: 45%;"></div>
+      <div id="google_translate_element" style="text-align: center; margin: auto; margin-left: 45%;"></div>
     </nav>
 
       {% block content %}{% endblock %}
     <div class="header notice">
-      <h1>Disclaimer: The purpose of this tool is to classify the news to help the consumers to judge the news and not to decide whether is True or False. <br> This site uses cookies in order to offer you the most relevant Information <br> We are thankful to INCD (Infraestrutura Nacional de Computação Distríbuida) to offer us the server to host this site. </h1>
+      <h1>Disclaimer: The purpose of this tool is to classify the news to help the consumers to judge the news and not to decide whether is True or False. <br> We are thankful to INCD (Infraestrutura Nacional de Computação Distríbuida) to offer us the server to host this site. </h1>
     </div>
     </div>
 
@@ -70,47 +70,31 @@
     <link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet"> 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-                pageLanguage: 'en',
-                autoDisplay: false,
-                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-            }, 'google_translate_element');
-            function changeGoogleStyles() {
-                if($('.goog-te-menu-frame').contents().find('.goog-te-menu2').length) {
-                    $('.goog-te-menu-frame').contents().find('.goog-te-menu2').css({
-                        'max-width':'100%',
-                        'overflow-x':'auto',
-                        'box-sizing':'border-box',
-                        'height':'auto'
-                    });
-                } else {
-                    setTimeout(changeGoogleStyles, 50);
-                }
-            }
-            changeGoogleStyles();
-        }
-    </script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-         <style>
-        .goog-te-banner-frame.skiptranslate {
-            display: none !important;
-        } 
-        body {
-            top: 0px !important; 
-        }
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        .goog-te-menu-frame {
-        max-width:100% !important; 
+
+<script type="text/javascript">
+    var duplicate_google_translate_counter = 0;
+    function googleTranslateElementInit() {
+        if (duplicate_google_translate_counter == 0) {
+            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
         }
-        .goog-te-menu2 { 
-        max-width: 100% !important;
-        overflow-x: scroll !important;
-        box-sizing:border-box !important; 
-        height:auto !important; 
-        }
-    </style>
+        duplicate_google_translate_counter++;
+    }
+</script>
+<script type="text/javascript">
+    if(document.cookie == ""){
+        $(document).ready(function(){   
+        setTimeout(function () {
+            $("#cookieConsent").fadeIn(200);
+         }, 4000);
+        $("#closeCookieConsent, .cookieConsentOK").click(function() {
+            $("#cookieConsent").fadeOut(200);
+        }); 
+    });
+    }
+</script>
 
 
 </body>
