--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -29,7 +29,7 @@
 					</article>
 
 					<div class="container">
-					  	<p style="font-size: 20px;">Does the title represent the content of the article?</p>
+					  	<p style="font-size: 20px;">1. Does the title represent the content of the article?</p>
 						<div class="radio">
 							<label class="radio"><input type="radio" value=1 name= "1_{{ key }}" > Completely Unrepresentative </label>
 						</div>
@@ -45,9 +45,9 @@
 					</div>
 
 					<div class="container">
-					  	<p style="font-size: 20px;">Why do you think the title does not represent the content of the article?</p>
+					  	<p style="font-size: 20px;">2. If you selected unrepresentative, why do you think the title does not represent the content of the article?</p>
 						<div class="radio">
-							<label class="radio"><input type="radio" value=1 name= "2_{{ key }}" > It's representative (If you selected Completely Representative) </label>
+							<label class="radio"><input type="radio" value=1 name= "2_{{ key }}" > It's representative (If you selected representative) </label>
 						</div>
 						<div class="radio">
 							<label class="radio"><input type="radio" value=2 name= "2_{{ key }}" > Title is on a different topic than the body </label>
@@ -64,7 +64,7 @@
 					</div>
 
 					<div class="container">
-					  	<p style="font-size: 20px;">Is the title clickbaity (form of false advertisement to attract attention and to make users read the news)? <br> Rank on a scale of 1 (Not clickbaity) to 4 (Very clickbaity)</p>
+					  	<p style="font-size: 20px;">3. Is the title clickbaity (form of false advertisement to attract attention and to make users read the news)? <br> Rank on a scale of 1 (Not clickbaity) to 5 (Very clickbaity)</p>
 						<div class="radio">
 							<label class="radio"><input type="radio" value=1 name= "3_{{ key }}" > 1 </label>
 						</div>
@@ -77,10 +77,13 @@
 						<div class="radio">
 							<label class="radio"><input type="radio" value=4 name= "3_{{ key }}"> 4 </label>
 						</div>
+						<div class="radio">
+							<label class="radio"><input type="radio" value=5 name= "3_{{ key }}"> 5 </label>
+						</div>
 					</div>
 
 					<div class="container">
-					  	<p style="font-size: 20px;">If you think the headline is clickbaity, what makes you think it is?</p>
+					  	<p style="font-size: 20px;">4. If you think the headline is clickbaity, what makes you think it is?</p>
 						<label for="comment">Answer:</label>
 						<div class="form-group">
 					    	<input type="text" class="form-control" id="text" name="4_{{ key }}">
@@ -88,7 +91,7 @@
 					</div>
 
 					<div class="container">
-					  	<p style="font-size: 20px;">Is the article subjective (it is expressed an opinion)? <br> Rank on a scale of 1 (Not subjective) to 4 (Very subjective)</p>
+					  	<p style="font-size: 20px;">5. Is the article subjective (it is expressed an opinion)? <br> Rank on a scale of 1 (Not subjective) to 5 (Very subjective)</p>
 						<div class="radio">
 							<label class="radio"><input type="radio" value=1 name= "5_{{ key }}" > 1</label>
 						</div>
@@ -101,10 +104,13 @@
 						<div class="radio">
 							<label class="radio"><input type="radio" value=4 name= "5_{{ key }}"> 4 </label>
 						</div>
+						<div class="radio">
+							<label class="radio"><input type="radio" value=5 name= "5_{{ key }}"> 5 </label>
+						</div>
 					</div>
 
 					<div class="container">
-					  	<p style="font-size: 20px;">How do you classify this news?</p>
+					  	<p style="font-size: 20px;">6. How do you classify this news?</p>
 					  	<div class="radio">
 					    	<label class="radio"><input type="radio" value=true name= "6_{{ key }}" >True</label>
 						</div>
